--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 </head>
 <body>
     <div class="links">
-        <a href="https://gurka.se/">Kolla in den här coola länken!</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Den här länken är ännu grymmare!</a>
-        <a href="https://www.google.com/search?sca_esv=566211836&rlz=1C1GCEA_enSE1019SE1019&q=johan+kateby&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjXwuab3LOBAxV5YPEDHdMyBSkQ0pQJegQIDRAB&biw=1280&bih=603&dpr=1.5#imgrc=n_HrxdrevHQTnM">Oj vad intressant</a>
+        <a id="link" href="https://gurka.se/">Kolla in den här coola länken!</a>
+        <a id="link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Den här länken är ännu grymmare!</a>
+        <a id="link" href="https://www.google.com/search?sca_esv=566211836&rlz=1C1GCEA_enSE1019SE1019&q=johan+kateby&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjXwuab3LOBAxV5YPEDHdMyBSkQ0pQJegQIDRAB&biw=1280&bih=603&dpr=1.5#imgrc=n_HrxdrevHQTnM">Oj vad intressant</a>
+        <h1 id="rubrik">Rubrik</h1>
+    </div>
+    <div class="mid">
+        <h1 id="vr">Vänster Rubrik</h1>
+        <h1 id="hr">Höger Rubrik</h1>
+    </div>
+    <div class="bot-diff">
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sapiente, porro officiis tenetur a aperiam. Eum eos odit consectetur ipsum tempora, aut in minima consequuntur cupiditate animi, delectus illum veniam.
+        Minus quos corporis eius molestias? Eligendi cupiditate quaerat quo numquam asperiores ipsa, nulla vitae repellendus adipisci ea? Minus quis nulla omnis totam, quae at labore, nihil harum quisquam illum eaque?
+        Corrupti porro molestiae esse minima voluptate soluta id vitae vel consequatur laudantium exercitationem quisquam vero natus praesentium error, sit atque. Eum sit architecto porro odit deserunt voluptas neque assumenda voluptatum?
+        Eaque aperiam obcaecati, aut laborum, consequuntur nihil saepe quaerat earum sint perferendis quidem ipsum at. Itaque quas cupiditate quasi laudantium illum sapiente expedita? Odit quae sint molestias sed, quibusdam eveniet?
+        Ratione sapiente earum aspernatur laboriosam est enim! Asperiores provident unde dicta quis nisi temporibus mollitia! Aperiam ipsum deserunt in accusamus provident ipsa explicabo, pariatur, accusantium, incidunt repellat cum quisquam minima.
+        </p>
     </div>
 
     
